2009-08-05  Atsushi Enomoto  <atsushi@ximian.com>

	* WebHttpBehavior.cs, WebScriptEnablingBehavior.cs :
	  mostly implemented Validate().

2008-04-21  Igor Zelmanovich  <igorz@mainsoft.com>

	* WebHttpBehavior.cs : override endpoint's ContractFilter 
	as well as AddressFilter. 

2008-04-16  Atsushi Enomoto  <atsushi@ximian.com>

	* WebHttpBehavior.cs : now that ServiceHost calls Validate(),
	  it prevents webHttpBinding working. So, removed NIE.

2008-02-15  Atsushi Enomoto  <atsushi@ximian.com>

	* WebHttpBehavior.cs : removed couple of MonoTODOs.

2008-02-15  Atsushi Enomoto  <atsushi@ximian.com>

	* WebHttpBehavior.cs : ApplyDispatchBehavior() sets address filter.

2008-02-15  Atsushi Enomoto  <atsushi@ximian.com>

	* WebHttpBehavior.cs :
	  Call AddClientErrorInspector() in ApplyClientBehavior().
	  Call AddServerErrorHandlers() in ApplyDispatchBehavior().

2008-02-14  Atsushi Enomoto  <atsushi@ximian.com>

	* WebHttpBehavior.cs : pass itself to WebMessageFormatter too.

2008-02-14  Atsushi Enomoto  <atsushi@ximian.com>

	* WebHttpBehavior.cs : now WebMessageFormatter requires 
	  QueryStringConverter. Hence implemented GetQueryStringConverter().

2008-02-14  Atsushi Enomoto  <atsushi@ximian.com>

	* WebHttpBehavior.cs : use WebMessageFormatter (note that they are
	  not done yet).

2008-02-13  Atsushi Enomoto  <atsushi@ximian.com>

	* WebScriptEnablingBehavior.cs : new stub.

2008-02-12  Atsushi Enomoto  <atsushi@ximian.com>

	* WebHttpBehavior.cs : some implementation (sorta wrong).

2008-02-07  Atsushi Enomoto  <atsushi@ximian.com>

	* WebHttpBehavior.cs : stub.